--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,17 @@ body {
 
 }
 
+@media (max-width: 600px) {
+  .btn {
+    display: inline-block;
+    margin: 5px;
+    height: 100px;
+    width: 100px;
+    border: 5px solid black;
+    border-radius: 20%;
+  }
+}
+
 .btn {
   margin: 25px;
   display: inline-block;
